Deep neural net
Added code for sentiment analysis using simple deep neural network.

--- a/Sentiment Analysis/Sentiment Analysis.ipynb
+++ b/Sentiment Analysis/Sentiment Analysis.ipynb
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1319,14 +1319,14 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_2 (Dense)              (None, 50)                755850    \n",
+      "dense_5 (Dense)              (None, 50)                3550      \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 50)                0         \n",
+      "dropout_2 (Dropout)          (None, 50)                0         \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 5)                 255       \n",
+      "dense_6 (Dense)              (None, 5)                 255       \n",
       "=================================================================\n",
-      "Total params: 756,105\n",
-      "Trainable params: 756,105\n",
+      "Total params: 3,805\n",
+      "Trainable params: 3,805\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n"
@@ -1338,8 +1338,8 @@
     "\n",
     "#num_words = len(word_index) + 1\n",
     "\n",
-    "input_shape = train_feature_cv.shape[1]\n",
-    "model.add(Dense(50,activation='relu', input_shape=(input_shape,)))\n",
+    "#input_shape = train_feature_cv.shape[1]\n",
+    "model.add(Dense(50,activation='relu', input_shape=(70,)))\n",
     "model.add(Dropout(0.2))\n",
     "model.add(Dense(5,activation='softmax'))\n",
     "\n",
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1366,54 +1366,54 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "156060/156060 [==============================] - 25s 158us/step - loss: 1.3071 - acc: 0.5339\n",
+      "156060/156060 [==============================] - 4s 26us/step - loss: 8.1165 - acc: 0.4930\n",
       "Epoch 2/10\n",
-      "156060/156060 [==============================] - 32s 207us/step - loss: 0.9540 - acc: 0.6210\n",
+      "156060/156060 [==============================] - 2s 15us/step - loss: 7.8838 - acc: 0.5085\n",
       "Epoch 3/10\n",
-      "156060/156060 [==============================] - 30s 190us/step - loss: 0.8430 - acc: 0.6640\n",
+      "156060/156060 [==============================] - 3s 17us/step - loss: 7.8784 - acc: 0.5083\n",
       "Epoch 4/10\n",
-      "156060/156060 [==============================] - 25s 157us/step - loss: 0.7886 - acc: 0.6835\n",
+      "156060/156060 [==============================] - 3s 18us/step - loss: 7.8580 - acc: 0.5095\n",
       "Epoch 5/10\n",
-      "156060/156060 [==============================] - 21s 137us/step - loss: 0.7531 - acc: 0.6965\n",
+      "156060/156060 [==============================] - 3s 18us/step - loss: 7.8505 - acc: 0.5097\n",
       "Epoch 6/10\n",
-      "156060/156060 [==============================] - 28s 178us/step - loss: 0.7267 - acc: 0.7062\n",
+      "156060/156060 [==============================] - 3s 19us/step - loss: 7.8632 - acc: 0.5078\n",
       "Epoch 7/10\n",
-      "156060/156060 [==============================] - 25s 157us/step - loss: 0.7042 - acc: 0.7140\n",
+      "156060/156060 [==============================] - 3s 20us/step - loss: 7.8540 - acc: 0.5095\n",
       "Epoch 8/10\n",
-      "156060/156060 [==============================] - 27s 175us/step - loss: 0.6860 - acc: 0.7208\n",
+      "156060/156060 [==============================] - 3s 19us/step - loss: 7.8291 - acc: 0.5109\n",
       "Epoch 9/10\n",
-      "156060/156060 [==============================] - 23s 145us/step - loss: 0.6711 - acc: 0.7256\n",
+      "156060/156060 [==============================] - 3s 19us/step - loss: 7.8189 - acc: 0.5112\n",
       "Epoch 10/10\n",
-      "156060/156060 [==============================] - 24s 153us/step - loss: 0.6576 - acc: 0.7297\n"
+      "156060/156060 [==============================] - 3s 19us/step - loss: 7.8143 - acc: 0.5103\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1a3b8d42e8>"
+       "<keras.callbacks.History at 0x1a43a96c50>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(train_feature_cv,y_train, epochs=10, batch_size=1000)"
+    "model.fit(train_seq_x,y_train, epochs=10, batch_size=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred_nn = model.predict(test_feature_cv)"
+    "y_pred_nn = model.predict(x=valid_seq_x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1422,16 +1422,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "41562"
+       "62994"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1446,19 +1446,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy :  0.6269534785494479\n"
+      "Accuracy :  0.9502504072889639\n"
      ]
     }
    ],
    "source": [
     "print(\"Accuracy : \", count/len(y_pred_nn))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Deep Learning Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Learn Word Embedding : while training the network "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_2 (Embedding)      (None, 70, 50)            757250    \n",
+      "_________________________________________________________________\n",
+      "gru_2 (GRU)                  (None, 32)                7968      \n",
+      "_________________________________________________________________\n",
+      "dense_7 (Dense)              (None, 5)                 165       \n",
+      "=================================================================\n",
+      "Total params: 765,383\n",
+      "Trainable params: 765,383\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "EMBEDDING_DIM = 50\n",
+    "model_dl = Sequential()\n",
+    "\n",
+    "vocab_size = len(word_index) + 1\n",
+    "model_dl.add(Embedding(vocab_size, EMBEDDING_DIM, input_length=70))\n",
+    "model_dl.add(GRU(units=32, dropout=0.2, recurrent_dropout=0.2))\n",
+    "model_dl.add(Dense(5, activation='softmax'))\n",
+    "\n",
+    "model_dl.compile(loss='categorical_crossentropy', optimizer='adam',metrics=['accuracy'])\n",
+    "print(model_dl.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train......\n",
+      "Epoch 1/10\n",
+      " - 2s - loss: 7.8083 - acc: 0.5091\n",
+      "Epoch 2/10\n",
+      " - 2s - loss: 7.7922 - acc: 0.5079\n",
+      "Epoch 3/10\n",
+      " - 2s - loss: 7.7979 - acc: 0.5055\n",
+      "Epoch 4/10\n",
+      " - 2s - loss: 7.7806 - acc: 0.5062\n",
+      "Epoch 5/10\n",
+      " - 2s - loss: 7.7519 - acc: 0.5076\n",
+      "Epoch 6/10\n",
+      " - 2s - loss: 7.6735 - acc: 0.5012\n",
+      "Epoch 7/10\n",
+      " - 2s - loss: 7.3139 - acc: 0.4664\n",
+      "Epoch 8/10\n",
+      " - 2s - loss: 6.8199 - acc: 0.4351\n",
+      "Epoch 9/10\n",
+      " - 2s - loss: 6.0715 - acc: 0.4126\n",
+      "Epoch 10/10\n",
+      " - 2s - loss: 5.5668 - acc: 0.5045\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1a473caac8>"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('Train......')\n",
+    "model.fit(train_seq_x,y_train,epochs=10,batch_size=2000,verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_dl = model.predict(valid_seq_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = y_pred_dl.argmax(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "61904"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for i in range(len(y_pred_nn)):\n",
+    "    if y_test[i] == y[i]:\n",
+    "            count += 1\n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy :  0.9338080009654257\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy : \", count/len(y_pred_dl))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The sentiment labels are:<br>**\n",
+    "\n",
+    "0 - negative<br>\n",
+    "1 - somewhat negative<br>\n",
+    "2 - neutral<br>\n",
+    "3 - somewhat positive<br>\n",
+    "4 - positive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4, 4, 3, 3, 0, 3, 2])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Let us test some examples\n",
+    "test_sample_1 = \"Maybe I like this movie\"\n",
+    "test_sample_2 = \"This movie is fantastic\"\n",
+    "test_sample_3 = \"Not to my taste\"\n",
+    "test_sample_4 = \"bad Movie\"\n",
+    "test_sample_5 = \"I don't like an action\"\n",
+    "test_sample_6 = \"This movie really sucks\"\n",
+    "test_sample_7 = \"Good Movie\"\n",
+    "test_sample_8 = \"Not a good movie\"\n",
+    "\n",
+    "test_sample = [test_sample_1,\n",
+    "               test_sample_2,\n",
+    "               test_sample_3,\n",
+    "               test_sample_4,\n",
+    "               test_sample_5,\n",
+    "               test_sample_6,\n",
+    "               test_sample_7,\n",
+    "               test_sample_8\n",
+    "              ]\n",
+    "\n",
+    "token = text.Tokenizer()\n",
+    "token.fit_on_texts(test_sample)\n",
+    "word_index = token.word_index\n",
+    "\n",
+    "test_sample_seq = sequence.pad_sequences(token.texts_to_sequences(test_sample), maxlen=70)\n",
+    "\n",
+    "#Prediction\n",
+    "model_dl.predict(test_sample_seq).argmax(1)"
    ]
   }
  ],
